# generative-ai-tools

./: .gitignore  pyproject.toml
langchain-llamaindex/: 01_Introducción_LangChain.ipynb  02_RAG_Langchain.ipynb  03_RAG_LlamaIndex.ipynb  04_Generacion_Documentos.ipynb  Guia_RAG_con_fuentes.docx  README.md  practica_grupal.md  pyproject.toml
langchain-llamaindex/RAG Data/: Información empleados.csv
langgraph_mcp/: 01_Introducción_LangGraph.ipynb  02_Agentes_LangGraph.ipynb  03_Resumen_Documentos_LangGraph.ipynb  practica_grupal.md  pyproject.toml
langsmith-rag/: 01_LangSmith_Observabilidad.ipynb  02_LangSmith_Evaluación.ipynb  03_LangSmith_Prompts.ipynb  Control_01 solucion.ipynb  Control_01.ipynb  participacion.md  pyproject.toml
langsmith-rag/Data/: Dataset.csv
