[project]
name = "generative-ai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "langchain-llamaindex",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
