[project]
name = "langchain-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "llama-index>=0.14.23",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-google-genai>=0.9.5",
    "llama-index-readers-file>=0.6.0",
    "llama-index-readers-web>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
]

